[gd_scene load_steps=61 format=2]

[ext_resource path="res://images/fireplace.png" type="Texture" id=1]
[ext_resource path="res://images/redo.png" type="Texture" id=2]
[ext_resource path="res://images/front_counter.png" type="Texture" id=3]
[ext_resource path="res://assets/SceneTransition.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/barrelthing.png" type="Texture" id=5]
[ext_resource path="res://images/kettle.png" type="Texture" id=6]
[ext_resource path="res://assets/Dialog_System.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/back_counter.png" type="Texture" id=8]
[ext_resource path="res://images/bulletin_board.png" type="Texture" id=9]
[ext_resource path="res://images/coffee_display.png" type="Texture" id=10]
[ext_resource path="res://images/register.png" type="Texture" id=11]
[ext_resource path="res://assets/OptionsMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://images/alch.png" type="Texture" id=13]
[ext_resource path="res://images/ingredients/Berries.png" type="Texture" id=14]
[ext_resource path="res://images/ingredients/Branch.png" type="Texture" id=15]
[ext_resource path="res://images/shelf.png" type="Texture" id=16]
[ext_resource path="res://assets/customer.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/Control.gd" type="Script" id=18]
[ext_resource path="res://images/cafe_BG.png" type="Texture" id=19]
[ext_resource path="res://assets/Spellbook.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/cauldron.tscn" type="PackedScene" id=21]
[ext_resource path="res://images/ingredients/Honeycomb.png" type="Texture" id=22]
[ext_resource path="res://images/lilbottle.png" type="Texture" id=23]
[ext_resource path="res://images/fireplacebg.png" type="Texture" id=24]
[ext_resource path="res://images/GUI/menu.png" type="Texture" id=25]
[ext_resource path="res://fonts/m5x7.tres" type="DynamicFont" id=26]
[ext_resource path="res://images/GUI/menu_hover.png" type="Texture" id=27]
[ext_resource path="res://images/jar_cabinet.png" type="Texture" id=28]
[ext_resource path="res://images/cabinet.png" type="Texture" id=29]
[ext_resource path="res://images/small_calinet.png" type="Texture" id=30]
[ext_resource path="res://images/bookcase.png" type="Texture" id=31]
[ext_resource path="res://images/umbroomla.png" type="Texture" id=32]
[ext_resource path="res://images/plant.png" type="Texture" id=33]
[ext_resource path="res://assets/scrolling_window.tscn" type="PackedScene" id=34]
[ext_resource path="res://images/panrack.png" type="Texture" id=35]
[ext_resource path="res://images/ingredients/Dandy.png" type="Texture" id=36]
[ext_resource path="res://images/ingredients/Silver Shell.png" type="Texture" id=37]
[ext_resource path="res://images/ingredients/Herbs.png" type="Texture" id=38]
[ext_resource path="res://images/ingredients/Roots.png" type="Texture" id=39]
[ext_resource path="res://images/ingredients/Beetle.png" type="Texture" id=40]
[ext_resource path="res://images/ingredients/Clover.png" type="Texture" id=41]
[ext_resource path="res://images/ingredients/Feather.png" type="Texture" id=42]
[ext_resource path="res://images/ingredients/Mushroom.png" type="Texture" id=43]
[ext_resource path="res://images/ingredients/Conch.png" type="Texture" id=44]
[ext_resource path="res://images/ingredients/Flower.png" type="Texture" id=45]
[ext_resource path="res://images/portrait_test.png" type="Texture" id=48]
[ext_resource path="res://assets/ingredient.tscn" type="PackedScene" id=49]

[sub_resource type="Shader" id=1]
code = "/* 
Original shader from Fubucci â€“ https://www.febucci.com/2019/05/fire-shader/ 
Converted to Godot Shader Language by Godot Shaders - godotshaders.com/shader/2D-fire/
*/

shader_type canvas_item;

uniform sampler2D noise_tex;
uniform sampler2D gradient_tex;

uniform vec4 brighter_color : hint_color = vec4(1.0, 0.8, 0.0, 1.0);
uniform vec4 middle_color : hint_color  = vec4(1.0, 0.56, 0.0, 1.0);
uniform vec4 darker_color : hint_color  = vec4(0.64, 0.2, 0.05, 1.0);

uniform float spread : hint_range(0.0, 1.0) = 0.5;

void fragment()
{
	
	float noise_value = texture(noise_tex, UV + vec2(0.0, TIME*0.5)).x;
	// The .yx swizzle is when using the built in horizontal gradient texture. If you have a vertical gradient texture remove .yx
	float gradient_value = texture(gradient_tex, UV.yx).x;
	
	gradient_value -= smoothstep(spread, spread + 0.5, length(UV + vec2(-0.5, -0.5)) / spread);
	
	float step1 = step(noise_value, gradient_value);
	float step2 = step(noise_value, gradient_value - 0.2);
	float step3 = step(noise_value, gradient_value - 0.4);
	
	vec3 bd_color = mix(brighter_color.rgb, darker_color.rgb, step1 - step2);
	
	vec4 color = vec4(bd_color, step1);
	color.rgb = mix(color.rgb, middle_color.rgb, step2 - step3);
	
	COLOR = color;
}"

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.00420168, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.0546218, 0.0546218, 0.0546218, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 50

[sub_resource type="OpenSimplexNoise" id=4]
seed = 69420

[sub_resource type="NoiseTexture" id=5]
flags = 2
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/brighter_color = Color( 1, 0.835294, 0.254902, 1 )
shader_param/middle_color = Color( 0.980392, 0.415686, 0.0392157, 1 )
shader_param/darker_color = Color( 0.45098, 0.0901961, 0.176471, 1 )
shader_param/spread = 0.6
shader_param/noise_tex = SubResource( 5 )
shader_param/gradient_tex = SubResource( 3 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
render_mode unshaded;

// Texture must have 'Filter'-flag enabled!

// Automatic smoothing
// independent of geometry and perspective
vec4 texturePointSmooth(sampler2D smp, vec2 uv, vec2 pixel_size)
{
	vec2 ddx = dFdx(uv);
	vec2 ddy = dFdy(uv);
	vec2 lxy = sqrt(ddx * ddx + ddy * ddy);
	
	vec2 uv_pixels = uv / pixel_size;
	
	vec2 uv_pixels_floor = round(uv_pixels) - vec2(0.5f);
	vec2 uv_dxy_pixels = uv_pixels - uv_pixels_floor;
	
	uv_dxy_pixels = clamp((uv_dxy_pixels - vec2(0.5f)) * pixel_size / lxy + vec2(0.5f), 0.0f, 1.0f);
	
	uv = uv_pixels_floor * pixel_size;
	
	return textureGrad(smp, uv + uv_dxy_pixels * pixel_size, ddx, ddy);
}

void fragment()
{
	COLOR = texturePointSmooth(TEXTURE, UV, TEXTURE_PIXEL_SIZE);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("backwall/lilbottle:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 170, 0, 0, 0, 0, 195, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("backwall/lilbottle:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 26, -0.25, 0, 0, -1, 20, -0.25, 0, 0.25, 0, 26, 0, -1, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[sub_resource type="Animation" id=12]
length = 1.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "door_open", null ],
"method": "audio_passer"
}, {
"args": [ "door_close", null ],
"method": "audio_passer"
} ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "explosion3", null ],
"method": "audio_passer"
}, {
"args": [ "poof", null ],
"method": "audio_passer"
} ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Customer = ExtResource( 17 )

[node name="bg_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="backwall" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 223.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 104, -6 )
rect_clip_content = true
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bulletin_board" type="TextureRect" parent="backwall"]
margin_left = 197.0
margin_top = 2.0
margin_right = 212.0
margin_bottom = 22.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backcounter" type="TextureRect" parent="backwall"]
margin_left = -88.0
margin_top = 26.0
margin_right = -43.0
margin_bottom = 36.0
texture = ExtResource( 8 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="umbroomla" type="TextureRect" parent="backwall"]
margin_left = 194.0
margin_top = 11.0
margin_right = 207.0
margin_bottom = 38.0
texture = ExtResource( 32 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panrack" type="TextureRect" parent="backwall"]
margin_left = 152.0
margin_top = 3.0
margin_right = 174.0
margin_bottom = 13.0
texture = ExtResource( 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jar_cabinet" type="TextureRect" parent="backwall"]
margin_left = 123.0
margin_right = 145.0
margin_bottom = 17.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plant" type="TextureRect" parent="backwall"]
margin_left = 208.0
margin_top = 19.0
margin_right = 223.0
margin_bottom = 38.0
texture = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bookcase" type="TextureRect" parent="backwall"]
margin_left = 98.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 39.0
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shelf" type="TextureRect" parent="backwall"]
margin_left = 60.0
margin_top = 3.0
margin_right = 98.0
margin_bottom = 18.0
texture = ExtResource( 16 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="small_calinet" type="TextureRect" parent="backwall"]
margin_left = 55.0
margin_top = 13.0
margin_right = 102.0
margin_bottom = 27.0
texture = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frontcounter" type="TextureRect" parent="backwall"]
margin_left = 123.0
margin_top = 27.0
margin_right = 198.0
margin_bottom = 38.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cabinet" type="TextureRect" parent="backwall"]
margin_left = 34.0
margin_top = 3.0
margin_right = 62.0
margin_bottom = 39.0
texture = ExtResource( 29 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fireplace" type="TextureRect" parent="backwall"]
margin_left = 3.0
margin_top = -2.0
margin_right = 33.0
margin_bottom = 38.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="backwall/fireplace"]
show_behind_parent = true
margin_left = 12.0
margin_top = 30.0
margin_right = 24.0
margin_bottom = 40.0
texture = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire" type="ColorRect" parent="backwall/fireplace"]
show_behind_parent = true
material = SubResource( 6 )
margin_left = 14.0
margin_top = 26.0
margin_right = 21.0
margin_bottom = 38.0
color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coffeeholder" type="TextureRect" parent="backwall"]
visible = false
margin_left = 167.0
margin_top = 24.0
margin_right = 180.0
margin_bottom = 37.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureRect" parent="backwall" groups=[
"exit",
]]
margin_left = 240.0
margin_top = 25.0
margin_right = 272.0
margin_bottom = 57.0
texture = ExtResource( 48 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="register" type="TextureRect" parent="backwall"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 174.0
margin_top = 24.0
margin_right = 179.0
margin_bottom = 30.0
texture = ExtResource( 11 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kettle" type="TextureRect" parent="backwall"]
margin_left = 125.0
margin_top = 19.0
margin_right = 133.0
margin_bottom = 27.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kettle2" type="TextureRect" parent="backwall"]
margin_left = 136.0
margin_top = 19.0
margin_right = 168.0
margin_bottom = 27.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lilbottle" type="Sprite" parent="backwall"]
position = Vector2( 174, 23 )
texture = ExtResource( 23 )
centered = false

[node name="barrelthing" type="TextureRect" parent="backwall"]
visible = false
margin_left = -24.0
margin_top = -2.0
margin_right = 9.0
margin_bottom = 38.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="burger" type="TextureButton" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 9.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( 104, -6 )
texture_normal = ExtResource( 25 )
texture_hover = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scrolling_Window" parent="." instance=ExtResource( 34 )]
light_mask = 2
material = SubResource( 8 )
margin_left = 1.0
margin_top = 42.0
margin_right = 223.0
margin_bottom = 84.0

[node name="counter" type="TextureRect" parent="Scrolling_Window"]
light_mask = 2
margin_right = 160.0
margin_bottom = 43.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Berries" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 2.0
margin_top = 15.0
margin_right = 25.0
margin_bottom = 37.0
texture_normal = ExtResource( 14 )

[node name="Conch" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 28.0
margin_top = 13.0
margin_right = 56.0
margin_bottom = 36.0
texture_normal = ExtResource( 44 )

[node name="Feather" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 56.0
margin_top = 10.0
margin_right = 83.0
margin_bottom = 37.0
texture_normal = ExtResource( 42 )

[node name="Herbs" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 88.0
margin_top = 13.0
margin_right = 103.0
margin_bottom = 37.0
texture_normal = ExtResource( 38 )

[node name="Mushroom" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 105.0
margin_top = 14.0
margin_right = 122.0
margin_bottom = 37.0
texture_normal = ExtResource( 43 )

[node name="Silver Shell" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 124.0
margin_top = 22.0
margin_right = 154.0
margin_bottom = 36.0
texture_normal = ExtResource( 37 )

[node name="Clover" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 158.0
margin_top = 16.0
margin_right = 173.0
margin_bottom = 36.0
texture_normal = ExtResource( 41 )

[node name="Flower" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 176.0
margin_top = 13.0
margin_right = 197.0
margin_bottom = 37.0
texture_normal = ExtResource( 45 )

[node name="Roots" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 200.0
margin_top = 14.0
margin_right = 221.0
margin_bottom = 36.0
texture_normal = ExtResource( 39 )

[node name="Dandy" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 224.0
margin_top = 13.0
margin_right = 245.0
margin_bottom = 39.0
texture_normal = ExtResource( 36 )

[node name="Honeycomb" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 252.0
margin_top = 15.0
margin_right = 274.0
margin_bottom = 36.0
texture_normal = ExtResource( 22 )

[node name="Branch" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 278.0
margin_top = 15.0
margin_right = 300.0
margin_bottom = 37.0
texture_normal = ExtResource( 15 )

[node name="Beetle" parent="Scrolling_Window/counter" instance=ExtResource( 49 )]
visible = false
margin_left = 303.0
margin_top = 14.0
margin_right = 327.0
margin_bottom = 39.0
texture_normal = ExtResource( 40 )

[node name="Panel" type="ColorRect" parent="Scrolling_Window"]
margin_left = 159.0
margin_top = -1.0
margin_right = 160.0
margin_bottom = 43.0
color = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cauldron" parent="Scrolling_Window" instance=ExtResource( 21 )]
margin_left = 160.0
margin_right = 222.0

[node name="Dialog" parent="." instance=ExtResource( 7 )]
margin_left = 1.0
margin_top = 85.0
margin_bottom = 85.058

[node name="FPS" type="Label" parent="."]
margin_left = 10.0
margin_top = 1.0
margin_right = 32.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 95, -6 )
custom_fonts/font = ExtResource( 26 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spellbook" parent="." instance=ExtResource( 20 )]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource( 12 )]

[node name="end_of_day" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_day_summary" type="RichTextLabel" parent="end_of_day"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
mouse_filter = 2
custom_fonts/normal_font = SubResource( 10 )
text = "another day, another dollar"

[node name="SceneTransition" parent="." instance=ExtResource( 4 )]

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 766.0

[node name="next_customer_timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bottle_give = SubResource( 11 )
anims/customer_entered = SubResource( 12 )
anims/potion_splash = SubResource( 13 )
[connection signal="tree_exiting" from="." to="." method="_on_Control_tree_exiting"]
[connection signal="pressed" from="burger" to="." method="_on_burger_pressed"]
[connection signal="gui_input" from="end_of_day" to="." method="_on_end_of_day_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="next_customer_timer" to="." method="_on_next_customer_timer_timeout"]
